sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:13: error: not found: value i
    i = 0
    ^AlgCombSort:15: error: not found: value i
    while(i + gap < getValueCount()) {
          ^AlgCombSort:16: error: not found: value i
      if(isSmaller(i + gap, i)) {
                   ^AlgCombSort:16: error: not found: value i
      if(isSmaller(i + gap, i)) {
                            ^AlgCombSort:17: error: not found: value i
        swap(i, i + gap)
             ^AlgCombSort:17: error: not found: value i
        swap(i, i + gap)
                ^AlgCombSort:18: error: not found: value i
        i += 1
        ^